[package]
name = "agent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Network monitoring agent that executes tasks and reports metrics to central server"

[[bin]]
name = "agent"
path = "src/main.rs"

[features]
default = []
sql-tasks = ["dep:rsql_drivers", "dep:rsql_driver", "shared/sql-tasks"]

[dependencies]
# Shared crate
shared = { path = "../shared" }

# Common dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
blake3.workspace = true
rusqlite.workspace = true
regex.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
base64.workspace = true
flate2.workspace = true
chrono.workspace = true

# Agent-specific dependencies
reqwest.workspace = true
hickory-resolver.workspace = true
socket2.workspace = true
url.workspace = true
hickory-client.workspace = true
openssl.workspace = true
tokio-openssl.workspace = true
ping-async.workspace = true
clap.workspace = true
rand.workspace = true
futures-util.workspace = true

# Optional SQL task dependencies
rsql_drivers = { workspace = true, optional = true }
rsql_driver = { workspace = true, optional = true }



[dev-dependencies]
tempfile.workspace = true
