[package]
name = "server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Central server for network monitoring system that aggregates metrics and manages agent configurations"

[[bin]]
name = "server"
path = "src/main.rs"

[features]
default = []
sql-tasks = ["shared/sql-tasks"]

[dependencies]
# Shared crate
shared = { path = "../shared" }

# Common dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
blake3.workspace = true
rusqlite.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
base64.workspace = true
flate2.workspace = true
chrono.workspace = true
tikv-jemallocator.workspace = true

# Server-specific dependencies
axum.workspace = true
tower.workspace = true
clap.workspace = true
subtle.workspace = true
futures-util.workspace = true

[dev-dependencies]
tempfile.workspace = true
