[package]
name = "shared"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Shared data structures and utilities for the network monitoring system"

[features]
default = []
sql-tasks = []
snmp-tasks = []

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
blake3.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
base64.workspace = true
regex.workspace = true
url.workspace = true
